# NPL

./: .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  configure.in
check/: Makefile  configure.in  main.cc  real.cc
include/nauths/npl/: dual_iterator.hh  dual_iterator.hxx  once.hh  pair.hh  range.hh  real.hh
include/nauths/npl/pp/: array_cat.hh  array_lower_bound.hh  array_sort.hh  discard.hh
scripts/: analysis
