## configure.in
## Made by nicuveo for npl



## Configuration
profile: release
sub-dirs: check
prefix: /usr/local


## Defaults
CC	  = g++
CFLAGS	  = -std=c++11 -W -Wall -Wextra -pedantic -I include -I src
DFLAGS    = -O0 -g3 -ggdb3 -DDEBUG
RFLAGS    = -O3 -DNDEBUG
LDFLAGS   =
TARGETS   = $(LIBA)

CFIL =


## Debug
[debug]
	CFLAGS  += $(DFLAGS) -pg -DMCL_DEBUG
	LDFLAGS += -pg

## Check
[check]
	CFLAGS  += $(DFLAGS) -Werror

## Profiling
[profiling]
	CFLAGS  += -g3 -ggdb3 -O2

## Release
[release]
	CFLAGS += $(RFLAGS)
